argocd/apps/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: upgrade-scheme
  namespace: immich
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-http
  namespace: immich
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`gallery.mohsun.az`) && !PathPrefix(`/.well-known/acme-challenge/`)
      services:
        - name: immich-server
          port: 2283
      middlewares:
        - name: upgrade-scheme
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-https
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gallery.mohsun.az`)
      services:
        - name: immich-server
          port: 2283
  tls:
    secretName: gallery-mohsun-az-tls
